game working, JS functional maybe not perfect, html styling almost complete, need to clean up score and gem containers and add hover effects for img/buttons

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 </head>
 
 <body>
-    <div class='container'>
+    <br>
+    <div class='container rounded'>
+
         <br>
         <div class='row'>
 
             <div class='col'>
-                <div class='jumbotron bbg-transparent text-center border'>
+                <div class='jumbotron bbg-transparent text-center'>
                     <h1>
                         <div class='dollars'>
                             $$$</div>
@@ -39,8 +41,8 @@
                 </div>
             </div>
         </div>
-        <div class='scores row text-center border'>
-            <div class='col-lg-6 text-left'>
+        <div class='row text-center '>
+            <div class='col-6 text-left'>
 
                 <div class='scores'>
                     <ul>
@@ -48,7 +50,7 @@
                             <p id='goblinScore'>Goblin Bag Space: </p>
                         </li>
                         <li>
-                            <p id='playerScore'>Current Score: </p>
+                            <p id='playerScore'>Start Looting those Gems! </p>
                         </li>
                         <li>
                             <p id='winCount'>Successful Loots: </p>
@@ -56,47 +58,61 @@
                         <li>
                             <p id='lossCount'>Dungeon Visits: </p>
                         </li>
+                    </ul>
 
                 </div>
             </div>
 
 
+
+
+            <div class='col-6'>
+
+
+                <!--  i want to experiment with hover effects here and it wasnt working after tinkering with it, will change tonight 9/18 or tomorrow
+                        <div class="view overlay zoom">
+                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" class="img-fluid " alt="smaple image">
+                     <div class="mask flex-center">
+                     <p class="white-text">Zoom effect</p>
+                        </div>
+                        </div>-->
+
+
+                <img src="assets/images/blueGem.png" id='button-1' class="rounded float-left" alt="Blue Gem">
+
+
+
+
+                <!-- <button type='button' class='btn btn-primary' id='button-1'>Gem 1</button> -->
+
+
+
+                <img src="assets/images/greenGem.jpg" id='button-2' class="rounded float-left" alt="Green Gem">
+                <!-- <button type='button' class='btn btn-primary' id='button-2'>Gem 2</button> -->
+
+
+                <img src="assets/images/purpleGem.jpg" id='button-3' class="rounded float-left" alt="Purple Gem">
+                <!-- <button type='button' class='btn btn-primary' id='button-3'>Gem 3</button> -->
+
+
+
+                <!-- <button type='button' class='btn btn-primary' id='button-4'>Gem 4</button> -->
+
+                <img src="assets/images/redGem.jpg" id='button-4' class="rounded float-left" alt='Red Gem'>
+
+            </div>
+
         </div>
-        <div class='gems row'>
-            <div class='col'>
-                gem images here
-
-                <button type='button' class='btn btn-primary' id='button-1'>Gem 1</button>
-            </div>
-            <div class='col'>
-                gem images here
-
-                <button type='button' class='btn btn-primary' id='button-2'>Gem 2</button>
-            </div>
-            <div class='col'>
-                gem images here
-
-                <button type='button' class='btn btn-primary' id='button-3'>Gem 3</button>
-            </div>
-            <div class='col'>
-                gem images here
-
-                <button type='button' class='btn btn-primary' id='button-4'>Gem 4</button>
-            </div>
-
-        </div>
-    </div>
-    </div>
 
 
 
 
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js'></script>
 
-    <script src='assets/javascript/game.js'></script>
+        <script src='assets/javascript/game.js'></script>
 
 </body>
 
